[project]
name = "cxr-qualitycheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.4",
    "monai[itk,nibabel]==1.3.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch==2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.49.0",
    "umap-learn>=0.5.7",
]
